// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`effectsLogger adds new props to scope 1`] = `
Object {
  "a": 0,
  "b": 2,
  "effects": [Function],
}
`;

exports[`effectsLogger auto mocks objects, arrays and functions 1`] = `
Object {
  "array": [Spy array],
  "effects": [Function],
  "function": [Spy function],
  "object": [Spy object],
}
`;

exports[`effectsLogger does not mock primitives 1`] = `
Object {
  "boolean": true,
  "effects": [Function],
  "null": null,
  "number": 1,
  "string": "foo",
  "symbol": Symbol(bar),
  "undefined": undefined,
}
`;

exports[`effectsLogger has working functionMocker as effects.fn 1`] = `[Spy foo]`;

exports[`functionMocker calls and passes args 1`] = `
EffectsLog [
  baz(
    1,
    2,
    3,
  ),
  forBaz(
    1,
    2,
    3,
  ),
]
`;

exports[`functionMocker ignores never called mocks 1`] = `
EffectsLog [
  fn1(
  ),
  fn3(
  ),
]
`;

exports[`functionMocker keeps order 1`] = `
EffectsLog [
  fn1(
  ),
  fn2(
  ),
  fn3(
  ),
]
`;

exports[`functionMocker logs 1`] = `
EffectsLog [
  baz(
    123,
  ),
]
`;

exports[`functionMocker mocks 1`] = `[Spy foo]`;

exports[`functionMocker mocks 2`] = `[Spy bar]`;

exports[`functionMocker returns value 1`] = `"returned value"`;

exports[`todos addTodo 1`] = `
EffectsLog [
  module.count =
    1,
  newTodo(
    1,
    "start using Introscope :)",
  ),
  log(
    "new todo created",
    1,
  ),
]
`;
